--- a/about.html
+++ b/about.html
@@ -200,7 +200,10 @@ $(document).ready(function () {
 </div>
 
 
-<p>More about this website.</p>
+<pre class="r"><code>library(ggplot2)
+
+ggplot(iris) + geom_point(aes(x = Sepal.Width, y = Petal.Length, color = Species))</code></pre>
+<p><img src="about_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
 
 
 
