--- a/test.html
+++ b/test.html
@@ -185,7 +185,7 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="test.md">test jscript</a>
+  <a href="test.html">test jscript</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
